# Application-for-analyzing-banking-transactions

./: .env.exempl  README.md  main.py  pyproject.toml
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
